@@ -1,5 +1,14 @@
 2005-05-09  Miklos Szeredi <miklos@szeredi.hu>
 
+	* libfuse: add "tree_lock" rwlock, that is locked for write in
+	rename, unlink and rmdir, and locked for read in all other
+	operations.  This should fix the rename/release race reported by
+	Valient Gough and others.  The solution is very coarse, a finer
+	grained locking scheme could be implemented, but it would be much
+	more complex.  Let's see whether this is good enough.
+
+2005-05-09  Miklos Szeredi <miklos@szeredi.hu>
+
 	* Released 2.3-pre7
 
 2005-05-08  Miklos Szeredi <miklos@szeredi.hu>
